ticketing/infra/k8s-prod/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: www.story-ticketing-web-fun.xyz
      http:
        paths:  # path matching goes in order. First api, then client
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/tickets/?(.*)
            backend:
                serviceName: tickets-srv 
                servicePort: 3000
          - path: /api/orders/?(.*)
            backend:
                serviceName: orders-srv 
                servicePort: 3000
          - path: /api/payments/?(.*)
            backend:
              serviceName: payments-srv 
              servicePort: 3000   
          - path: /?(.*)  # catch all goes last
            backend:
              serviceName: client-srv 
              servicePort: 3000    
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.story-ticketing-web-fun.xyz'
  labels:
    helm.sh/chart: ingress-nginx-3.12.0
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.34.1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
